--- a/makefile.linux
+++ b/makefile.linux
@@ -1,7 +1,7 @@
 CHAINPREFIX=
 CC=g++
 STRIP=strip
-CFLAGS=-Wall
+CFLAGS=-Wall -g
 LFLAGS=-Wall -lSDL -lSDL_image -lSDL_ttf
 TARGET=../build/DinguxCommander
 OBJS=main.o sdlutils.o resourceManager.o fileLister.o commander.o panel.o dialog.o window.o fileutils.o viewer.o keyboard.o
@@ -10,7 +10,7 @@ all: $(TARGET)
 
 $(TARGET): $(OBJS)
 	$(CC) $(LFLAGS) -o $(TARGET) $(OBJS)
-	$(STRIP) $(TARGET)
+	#$(STRIP) $(TARGET)
 
 main.o: main.cpp def.h resourceManager.h commander.h sdlutils.h
 	$(CC) $(CFLAGS) -c main.cpp
